--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -6,10 +6,10 @@
     "KEYBOARD_savePhrase": "Guardar frase",
     "KEYBOARD_sendWhatsApp": "Enviar por WhatsApp",
     "SETTINGS_settings": "Configuración",
-    "SETTINGS_language": "Idioma",
+    "SETTINGS_language": "Idioma:",
     "SETTINGS_english": "Inglés",
     "SETTINGS_spanish": "Español",
-    "SETTINGS_theme": "Tema",
+    "SETTINGS_theme": "Tema:",
     "SETTINGS_light": "Claro",
     "SETTINGS_dark": "Oscuro",
     "SETTINGS_system": "Sistema"
