--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -5,6 +5,9 @@
     "KEYBOARD_all": "All",
     "KEYBOARD_savePhrase": "Save Phrase",
     "KEYBOARD_sendWhatsApp": "send to WhatsApp",
+    "KEYBOARD_numbers": "Numbers",
+    "KEYBOARD_symbols": "Symbols",
+    "KEYBOARD_phrases": "Phrases",
     "SETTINGS_settings": "Settings",
     "SETTINGS_language": "Language:",
     "SETTINGS_english": "English",
