--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -5,6 +5,9 @@
     "KEYBOARD_all": "Todo",
     "KEYBOARD_savePhrase": "Guardar frase",
     "KEYBOARD_sendWhatsApp": "Enviar por WhatsApp",
+    "KEYBOARD_numbers": "Números",
+    "KEYBOARD_symbols": "Símbolos",
+    "KEYBOARD_phrases": "Frases",
     "SETTINGS_settings": "Configuración",
     "SETTINGS_language": "Idioma:",
     "SETTINGS_english": "Inglés",
