fix design buttons

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -3,11 +3,12 @@
     "KEYBOARD_letter": "Letter",
     "KEYBOARD_word": "Word",
     "KEYBOARD_all": "All",
-    "KEYBOARD_savePhrase": "Save Phrase",
-    "KEYBOARD_sendWhatsApp": "send to WhatsApp",
+    "KEYBOARD_savePhrase": "Save\nPhrase",
+    "KEYBOARD_send": "Send",
     "KEYBOARD_numbers": "Numbers",
     "KEYBOARD_symbols": "Symbols",
     "KEYBOARD_phrases": "Phrases",
+    
     "SETTINGS_settings": "Settings",
     "SETTINGS_language": "Language:",
     "SETTINGS_english": "English",
