--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -3,11 +3,12 @@
     "KEYBOARD_letter": "Letra",
     "KEYBOARD_word": "Palabra",
     "KEYBOARD_all": "Todo",
-    "KEYBOARD_savePhrase": "Guardar frase",
-    "KEYBOARD_sendWhatsApp": "Enviar por WhatsApp",
+    "KEYBOARD_savePhrase": "Guardar\nfrase",
+    "KEYBOARD_send": "Enviar",
     "KEYBOARD_numbers": "Números",
     "KEYBOARD_symbols": "Símbolos",
     "KEYBOARD_phrases": "Frases",
+    
     "SETTINGS_settings": "Configuración",
     "SETTINGS_language": "Idioma:",
     "SETTINGS_english": "Inglés",
