add show/hide text es/en on show/hide title

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -8,6 +8,8 @@
     "KEYBOARD_numbers": "Numbers",
     "KEYBOARD_symbols": "Symbols",
     "KEYBOARD_phrases": "Phrases",
+    "appbar_show": "Show title",
+    "appbar_hide": "Hide title",
     
     "SETTINGS_settings": "Settings",
     "SETTINGS_language": "Language:",
