fail colors vowals

--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -1,4 +1,5 @@
 {
+    "KEYBOARD_title": "Teclado Parkingson",
     "KEYBOARD_read": "Leer",
     "KEYBOARD_letter": "Letra",
     "KEYBOARD_word": "Palabra",
