--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,5 @@
 {
+    "KEYBOARD_title": "Parkingson Keyboard",
     "KEYBOARD_read": "Read",
     "KEYBOARD_letter": "Letter",
     "KEYBOARD_word": "Word",
@@ -10,7 +11,6 @@
     "KEYBOARD_phrases": "Phrases",
     "appbar_show": "Show title",
     "appbar_hide": "Hide title",
-    
     "SETTINGS_settings": "Settings",
     "SETTINGS_language": "Language:",
     "SETTINGS_english": "English",
