action key font size label

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,16 +1,16 @@
 {
-    "KEYBOARD_title": "Parkingson Keyboard",
+    "KEYBOARD_title": "Parkinson Keyboard",
     "KEYBOARD_read": "Read",
     "KEYBOARD_letter": "Letter",
     "KEYBOARD_word": "Word",
     "KEYBOARD_all": "All",
-    "KEYBOARD_savePhrase": "Save\nPhrase",
-    "KEYBOARD_send": "Send",
+    "KEYBOARD_show_title": "Show title",
+    "KEYBOARD_hide_title": "Hide title",
+    "KEYBOARD_savePhrase": "Save Phrase",
+    "KEYBOARD_contacs": "Contacts",
     "KEYBOARD_numbers": "Numbers",
     "KEYBOARD_symbols": "Symbols",
     "KEYBOARD_phrases": "Phrases",
-    "appbar_show": "Show title",
-    "appbar_hide": "Hide title",
     "SETTINGS_settings": "Settings",
     "SETTINGS_language": "Language:",
     "SETTINGS_english": "English",
