--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -1,16 +1,16 @@
 {
-    "KEYBOARD_title": "Teclado Parkingson",
+    "KEYBOARD_title": "Teclado Parkinson",
     "KEYBOARD_read": "Leer",
     "KEYBOARD_letter": "Letra",
     "KEYBOARD_word": "Palabra",
     "KEYBOARD_all": "Todo",
-    "KEYBOARD_savePhrase": "Guardar\nfrase",
-    "KEYBOARD_send": "Enviar",
+        "KEYBOARD_show_title": "Mostrar título",
+    "KEYBOARD_hide_title": "Ocultar título",
+    "KEYBOARD_savePhrase": "Guardar frase",
+    "KEYBOARD_contacs": "Contactos",
     "KEYBOARD_numbers": "Números",
     "KEYBOARD_symbols": "Símbolos",
     "KEYBOARD_phrases": "Frases",
-    "appbar_show": "Mostrar título",
-    "appbar_hide": "Ocultar título",
     "SETTINGS_settings": "Configuración",
     "SETTINGS_language": "Idioma:",
     "SETTINGS_english": "Inglés",
