--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -7,7 +7,7 @@
     "KEYBOARD_show_title": "Show title",
     "KEYBOARD_hide_title": "Hide title",
     "KEYBOARD_savePhrase": "Save Phrase",
-    "KEYBOARD_contacs": "Contacts",
+    "KEYBOARD_contacts": "Contacts",
     "KEYBOARD_numbers": "Numbers",
     "KEYBOARD_symbols": "Symbols",
     "KEYBOARD_phrases": "Phrases",
@@ -16,9 +16,17 @@
     "SETTINGS_english": "English",
     "SETTINGS_spanish": "Spanish",
     "SETTINGS_theme": "Theme:",
-    "SETTINGS_light": "Light",
-    "SETTINGS_dark": "Dark",
-    "SETTINGS_system": "System",
+    "SETTINGS_light_mode": "Light",
+    "SETTINGS_dark_mode": "Dark",
+    "SETTINGS_system_mode": "System",
     "SETTINGS_key_delay": "Key Accept Delay",
-    "SETTINGS_haptic": "Vibration On"
+    "SETTINGS_haptic": "Vibration On",
+    "SETTINGS_vibration_level": "Vibration Level",
+    "SETTINGS_light": "Soft",
+    "SETTINGS_medium": "Medium",
+    "SETTINGS_strong": "Strong",
+    "SETTINGS_accessibility_profile": "Accessibility profile",
+    "SETTINGS_contacts": "Contacts",
+    "SETTINGS_manage_contacts": "Manage Contacts",
+    "SETTINGS_keyboard_type": "Keyboard Type"
 }
