--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -4,7 +4,7 @@
     "KEYBOARD_letter": "Letra",
     "KEYBOARD_word": "Palabra",
     "KEYBOARD_all": "Todo",
-        "KEYBOARD_show_title": "Mostrar título",
+    "KEYBOARD_show_title": "Mostrar título",
     "KEYBOARD_hide_title": "Ocultar título",
     "KEYBOARD_savePhrase": "Guardar frase",
     "KEYBOARD_contacs": "Contactos",
@@ -16,9 +16,17 @@
     "SETTINGS_english": "Inglés",
     "SETTINGS_spanish": "Español",
     "SETTINGS_theme": "Tema:",
-    "SETTINGS_light": "Claro",
-    "SETTINGS_dark": "Oscuro",
-    "SETTINGS_system": "Sistema",
+    "SETTINGS_light_mode": "Claro",
+    "SETTINGS_dark_mode": "Oscuro",
+    "SETTINGS_system_mode": "Sistema",
     "SETTINGS_key_delay": "Retraso para aceptar tecla",
-    "SETTINGS_haptic": "Vibración activa"
+    "SETTINGS_haptic": "Vibración activa",
+    "SETTINGS_vibration_level": "Nivel de Vibración",
+    "SETTINGS_light": "Suave",
+    "SETTINGS_medium": "Medio",
+    "SETTINGS_strong": "Fuerte",
+    "SETTINGS_accessibility_profile": "Perfil de accesibilidad",
+    "SETTINGS_contacts": "Contactos",
+    "SETTINGS_manage_contacts": "Administrar Contactos",
+    "SETTINGS_keyboard_type": "Tipo de teclado"
 }
