fix translation title on bar

--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -7,7 +7,7 @@
     "KEYBOARD_show_title": "Mostrar título",
     "KEYBOARD_hide_title": "Ocultar título",
     "KEYBOARD_savePhrase": "Guardar frase",
-    "KEYBOARD_contacs": "Contactos",
+    "KEYBOARD_contacts": "Contactos",
     "KEYBOARD_numbers": "Números",
     "KEYBOARD_symbols": "Símbolos",
     "KEYBOARD_phrases": "Frases",
